feat: add some gallery feature

--- a/samples/Huskui.Gallery/App.axaml
+++ b/samples/Huskui.Gallery/App.axaml
@@ -4,8 +4,15 @@
              RequestedThemeVariant="Default">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceInclude Source="avares://Huskui.Gallery/Themes/Controls.axaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
+    
     <Application.Styles>
-        <FluentTheme />
         <StyleInclude Source="avares://Huskui.Avalonia/Prelude.axaml" />
     </Application.Styles>
 </Application>
