--- a/samples/Huskui.Gallery/MainWindow.axaml
+++ b/samples/Huskui.Gallery/MainWindow.axaml
@@ -4,50 +4,26 @@
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:husk="https://github.com/d3ara1n/Huskui.Avalonia"
                 xmlns:fi="clr-namespace:FluentIcons.Avalonia;assembly=FluentIcons.Avalonia"
+                xmlns:local="clr-namespace:Huskui.Gallery"
+                xmlns:models="clr-namespace:Huskui.Gallery.Models"
                 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                 ExtendClientAreaTitleBarHeightHint="44"
                 TransparencyLevelHint="Mica, None"
                 x:Class="Huskui.Gallery.MainWindow"
-                Title="Huskui.Gallery">
-    <Grid RowDefinitions="Auto,*" Margin="24" RowSpacing="12">
-        <Button Grid.Row="0" Click="ChangeTheme_OnClick">
-            <fi:SymbolIcon Symbol="Lightbulb" />
-        </Button>
-        <StackPanel Grid.Row="1" Spacing="12">
-            <husk:Card>
-                <StackPanel Spacing="4" Width="128">
-                    <ComboBox>
-                        <ComboBoxItem Content="AAA" />
-                        <ComboBoxItem Content="BBB" />
-                    </ComboBox>
-                </StackPanel>
-            </husk:Card>
-            <husk:Card>
-                <Grid ColumnDefinitions="*,*" ColumnSpacing="12">
-                    <StackPanel Grid.Column="0" Spacing="4">
-                        <Button Content="Hello" Theme="{StaticResource OutlineButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Primary" Theme="{StaticResource OutlineButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Success" Theme="{StaticResource OutlineButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Warning" Theme="{StaticResource OutlineButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Danger" Theme="{StaticResource OutlineButtonTheme}" />
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Spacing="4">
-                        <Button Content="Hello" Theme="{StaticResource GhostButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Primary" Theme="{StaticResource GhostButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Success" Theme="{StaticResource GhostButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Warning" Theme="{StaticResource GhostButtonTheme}" />
-                        <husk:Divider />
-                        <Button Content="Hello" Classes="Danger" Theme="{StaticResource GhostButtonTheme}" />
-                    </StackPanel>
-                </Grid>
-            </husk:Card>
-        </StackPanel>
+                Title="Huskui.Gallery" x:DataType="local:MainWindowContext">
+    <husk:AppWindow.DataContext>
+        <local:MainWindowContext />
+    </husk:AppWindow.DataContext>
+    <Grid ColumnDefinitions="Auto,*">
+        <ListBox Grid.Column="0" ItemsSource="{Binding Entries}"
+                 SelectedItem="{Binding SelectedEntry,Mode=OneWayToSource}"
+                 Background="{StaticResource ControlTranslucentHalfBackgroundBrush}">
+            <ListBox.ItemTemplate>
+                <DataTemplate x:DataType="models:EntryModel">
+                    <TextBlock Text="{Binding Display}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <husk:Frame Name="Root" Grid.Column="1" />
     </Grid>
 </husk:AppWindow>
