--- a/src/Huskui.Avalonia/Prelude.axaml
+++ b/src/Huskui.Avalonia/Prelude.axaml
@@ -3,15 +3,15 @@
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="/Themes/Basics.axaml" />
-                <ResourceInclude Source="/Themes/Colors.axaml" />
-                <ResourceInclude Source="/Themes/CornerRadius.axaml" />
-                <ResourceInclude Source="/Themes/FontSize.axaml" />
-                <ResourceInclude Source="/Themes/Controls.axaml" />
+                <ResourceInclude Source="avares://Huskui.Avalonia/Themes/Basics.axaml" />
+                <ResourceInclude Source="avares://Huskui.Avalonia/Themes/Colors.axaml" />
+                <ResourceInclude Source="avares://Huskui.Avalonia/Themes/CornerRadius.axaml" />
+                <ResourceInclude Source="avares://Huskui.Avalonia/Themes/FontSize.axaml" />
+                <ResourceInclude Source="avares://Huskui.Avalonia/Themes/Controls.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Styles.Resources>
 
-    <StyleInclude Source="/Themes/Animations.axaml" />
-    <StyleInclude Source="/Themes/Miscellaneous.axaml" />
+    <StyleInclude Source="avares://Huskui.Avalonia/Themes/Animations.axaml" />
+    <StyleInclude Source="avares://Huskui.Avalonia/Themes/Miscellaneous.axaml" />
 </Styles>
