--- a/src/Huskui.Avalonia/Themes/Controls.axaml
+++ b/src/Huskui.Avalonia/Themes/Controls.axaml
@@ -1,57 +1,57 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceInclude Source="/Controls/AppWindow.axaml" />
-        <ResourceInclude Source="/Controls/Button.axaml" />
-        <ResourceInclude Source="/Controls/ButtonGroup.axaml" />
-        <ResourceInclude Source="/Controls/BusyContainer.axaml" />
-        <ResourceInclude Source="/Controls/Card.axaml" />
-        <ResourceInclude Source="/Controls/Carousel.axaml" />
-        <ResourceInclude Source="/Controls/PipsPager.axaml" />
-        <ResourceInclude Source="/Controls/CheckBox.axaml" />
-        <ResourceInclude Source="/Controls/ComboBox.axaml" />
-        <ResourceInclude Source="/Controls/Dialog.axaml" />
-        <ResourceInclude Source="/Controls/Divider.axaml" />
-        <ResourceInclude Source="/Controls/DropDownButton.axaml" />
-        <ResourceInclude Source="/Controls/DropZone.axaml" />
-        <ResourceInclude Source="/Controls/Expander.axaml" />
-        <ResourceInclude Source="/Controls/Flyout.axaml" />
-        <ResourceInclude Source="/Controls/Frame.axaml" />
-        <ResourceInclude Source="/Controls/HighlightBlock.axaml" />
-        <ResourceInclude Source="/Controls/HyperlinkButton.axaml" />
-        <ResourceInclude Source="/Controls/IconLabel.axaml" />
-        <ResourceInclude Source="/Controls/InfiniteScrollView.axaml" />
-        <ResourceInclude Source="/Controls/InfoBar.axaml" />
-        <ResourceInclude Source="/Controls/ItemsControl.axaml" />
-        <ResourceInclude Source="/Controls/LazyContainer.axaml" />
-        <ResourceInclude Source="/Controls/ListBox.axaml" />
-        <ResourceInclude Source="/Controls/Menu.axaml" />
-        <ResourceInclude Source="/Controls/Modal.axaml" />
-        <ResourceInclude Source="/Controls/NotificationHost.axaml" />
-        <ResourceInclude Source="/Controls/NotificationItem.axaml" />
-        <ResourceInclude Source="/Controls/OverlayHost.axaml" />
-        <ResourceInclude Source="/Controls/OverlayItem.axaml" />
-        <ResourceInclude Source="/Controls/Page.axaml" />
-        <ResourceInclude Source="/Controls/PlaceholderPresenter.axaml" />
-        <ResourceInclude Source="/Controls/Popup.axaml" />
-        <ResourceInclude Source="/Controls/ProgressBar.axaml" />
-        <ResourceInclude Source="/Controls/ProgressRing.axaml" />
-        <ResourceInclude Source="/Controls/Separator.axaml" />
-        <ResourceInclude Source="/Controls/ScrollBar.axaml" />
-        <ResourceInclude Source="/Controls/ScrollViewer.axaml" />
-        <ResourceInclude Source="/Controls/SkeletonContainer.axaml" />
-        <ResourceInclude Source="/Controls/SplitButton.axaml" />
-        <ResourceInclude Source="/Controls/StepControl.axaml" />
-        <ResourceInclude Source="/Controls/StepItem.axaml" />
-        <ResourceInclude Source="/Controls/SwitchPresenter.axaml" />
-        <ResourceInclude Source="/Controls/TabControl.axaml" />
-        <ResourceInclude Source="/Controls/TabStrip.axaml" />
-        <ResourceInclude Source="/Controls/Tag.axaml" />
-        <ResourceInclude Source="/Controls/TextBox.axaml" />
-        <ResourceInclude Source="/Controls/TransitioningContentControl.axaml" />
-        <ResourceInclude Source="/Controls/Toast.axaml" />
-        <ResourceInclude Source="/Controls/ToggleButton.axaml" />
-        <ResourceInclude Source="/Controls/ToggleSwitch.axaml" />
-        <ResourceInclude Source="/Controls/ToolTip.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/AppWindow.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Button.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ButtonGroup.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/BusyContainer.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Card.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Carousel.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/PipsPager.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/CheckBox.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ComboBox.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Dialog.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Divider.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/DropDownButton.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/DropZone.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Expander.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Flyout.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Frame.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/HighlightBlock.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/HyperlinkButton.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/IconLabel.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/InfiniteScrollView.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/InfoBar.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ItemsControl.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/LazyContainer.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ListBox.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Menu.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Modal.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/NotificationHost.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/NotificationItem.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/OverlayHost.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/OverlayItem.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Page.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/PlaceholderPresenter.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Popup.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ProgressBar.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ProgressRing.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Separator.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ScrollBar.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ScrollViewer.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/SkeletonContainer.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/SplitButton.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/StepControl.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/StepItem.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/SwitchPresenter.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/TabControl.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/TabStrip.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Tag.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/TextBox.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/TransitioningContentControl.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/Toast.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ToggleButton.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ToggleSwitch.axaml" />
+        <ResourceInclude Source="avares://Huskui.Avalonia/Controls/ToolTip.axaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
