--- a/samples/Huskui.Gallery/App.axaml
+++ b/samples/Huskui.Gallery/App.axaml
@@ -1,5 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:husk="https://github.com/d3ara1n/Huskui.Avalonia"
              x:Class="Huskui.Gallery.App"
              RequestedThemeVariant="Default">
     <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
@@ -13,6 +14,6 @@
     </Application.Resources>
 
     <Application.Styles>
-        <StyleInclude Source="avares://Huskui.Avalonia/Prelude.axaml" />
+        <husk:HuskuiTheme />
     </Application.Styles>
 </Application>
