--- a/src/Huskui.Avalonia/Controls/PipsPager.axaml
+++ b/src/Huskui.Avalonia/Controls/PipsPager.axaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia"
-                    xmlns:avalonia="clr-namespace:FluentIcons.Avalonia;assembly=FluentIcons.Avalonia"
-                    xmlns:huskc="https://github.com/d3ara1n/Huskui.Avalonia/Converters">
+                    xmlns:avalonia="clr-namespace:FluentIcons.Avalonia;assembly=FluentIcons.Avalonia">
     <ControlTheme x:Key="{x:Type local:PipsPager}" TargetType="local:PipsPager">
         <Setter Property="Background" Value="{StaticResource OverlayFullBackgroundBrush}" />
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
@@ -23,7 +22,7 @@
                     <ListBox HorizontalAlignment="Center"
                              SelectionMode="AlwaysSelected"
                              SelectedIndex="{TemplateBinding SelectedIndex,Mode=TwoWay}"
-                             ItemsSource="{TemplateBinding ItemCount,Converter={x:Static huskc:InternalConverters.CountToArray}}">
+                             ItemsSource="{TemplateBinding ItemCount,Converter={x:Static local:InternalConverters.CountToArray}}">
                         <ListBox.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <StackPanel Orientation="Horizontal" Spacing="4" />
