--- a/src/Huskui.Avalonia/Controls/ToggleSplitButton.axaml
+++ b/src/Huskui.Avalonia/Controls/ToggleSplitButton.axaml
@@ -1,23 +1,23 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia"
-                    xmlns:fi="using:FluentIcons.Avalonia">
+                    xmlns:fi="clr-namespace:FluentIcons.Avalonia;assembly=FluentIcons.Avalonia">
     <Design.PreviewWith>
         <Panel Background="White">
             <StackPanel Margin="24">
-                <SplitButton>
+                <ToggleSplitButton IsChecked="True">
                     <TextBlock Text="Hello World" />
 
-                    <SplitButton.Flyout>
+                    <ToggleSplitButton.Flyout>
                         <MenuFlyout>
                             <MenuItem Header="Menu" />
                         </MenuFlyout>
-                    </SplitButton.Flyout>
-                </SplitButton>
+                    </ToggleSplitButton.Flyout>
+                </ToggleSplitButton>
             </StackPanel>
         </Panel>
     </Design.PreviewWith>
-    <ControlTheme x:Key="{x:Type SplitButton}" TargetType="SplitButton">
+    <ControlTheme x:Key="{x:Type ToggleSplitButton}" TargetType="ToggleSplitButton">
         <Setter Property="Background" Value="{StaticResource ControlInteractiveBackgroundBrush}" />
         <Setter Property="Foreground" Value="{StaticResource ControlForegroundBrush}" />
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
@@ -31,26 +31,27 @@
         <Setter Property="Template">
             <ControlTemplate>
                 <Grid ColumnDefinitions="*,Auto" ColumnSpacing="2">
-                    <Button x:Name="PART_PrimaryButton" Grid.Column="0"
-                            Foreground="{TemplateBinding Foreground}"
-                            Background="{TemplateBinding Background}"
-                            BorderThickness="{TemplateBinding BorderThickness, Converter={x:Static local:ThicknessConverters.WithoutRight}}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            Content="{TemplateBinding Content}"
-                            ContentTemplate="{TemplateBinding ContentTemplate}"
-                            Command="{TemplateBinding Command}"
-                            CommandParameter="{TemplateBinding CommandParameter}"
-                            CornerRadius="{TemplateBinding CornerRadius, Converter={x:Static local:CornerRadiusConverters.Left}}"
-                            FontFamily="{TemplateBinding FontFamily}"
-                            FontSize="{TemplateBinding FontSize}"
-                            FontWeight="{TemplateBinding FontWeight}"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                            Padding="{TemplateBinding Padding}"
-                            Focusable="False"
-                            KeyboardNavigation.IsTabStop="False" />
+                    <ToggleButton x:Name="PART_PrimaryButton" Grid.Column="0"
+                                  Foreground="{TemplateBinding Foreground}"
+                                  Background="{TemplateBinding Background}"
+                                  BorderThickness="{TemplateBinding BorderThickness, Converter={x:Static local:ThicknessConverters.WithoutRight}}"
+                                  BorderBrush="{TemplateBinding BorderBrush}"
+                                  Content="{TemplateBinding Content}"
+                                  ContentTemplate="{TemplateBinding ContentTemplate}"
+                                  Command="{TemplateBinding Command}"
+                                  CommandParameter="{TemplateBinding CommandParameter}"
+                                  CornerRadius="{TemplateBinding CornerRadius, Converter={x:Static local:CornerRadiusConverters.Left}}"
+                                  FontFamily="{TemplateBinding FontFamily}"
+                                  FontSize="{TemplateBinding FontSize}"
+                                  FontWeight="{TemplateBinding FontWeight}"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Stretch"
+                                  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  Padding="{TemplateBinding Padding}"
+                                  Focusable="False"
+                                  IsChecked="{TemplateBinding IsChecked}"
+                                  KeyboardNavigation.IsTabStop="False" />
                     <Button x:Name="PART_SecondaryButton" Grid.Column="1"
                             Foreground="{TemplateBinding Foreground}"
                             Background="{TemplateBinding Background}"
