--- a/src/Huskui.Avalonia/Controls/OverlayHost.axaml
+++ b/src/Huskui.Avalonia/Controls/OverlayHost.axaml
@@ -27,19 +27,21 @@
         <Setter Property="VerticalAlignment" Value="Stretch" />
         <Setter Property="Background" Value="{StaticResource OverlaySmokeBackgroundBrush}" />
         <Setter Property="IsVisible" Value="False" />
+        <Setter Property="ItemsPanel">
+            <ItemsPanelTemplate>
+                <Panel />
+            </ItemsPanelTemplate>
+        </Setter>
         <Setter Property="Template">
             <ControlTemplate>
                 <Panel>
                     <Border Name="{x:Static local:OverlayHost.PART_Stage}" Background="{TemplateBinding Background}"
                             BackgroundSizing="{TemplateBinding BackgroundSizing}" />
-                    <ItemsControl Name="{x:Static local:OverlayHost.PART_ItemsPresenter}"
-                                  Padding="{TemplateBinding Padding}" ItemsSource="{TemplateBinding Items}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <Panel />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    </ItemsControl>
+                    <ItemsPresenter Name="{x:Static local:OverlayHost.PART_ItemsPresenter}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    Margin="{TemplateBinding Padding}" ItemsPanel="{TemplateBinding ItemsPanel}">
+                    </ItemsPresenter>
                 </Panel>
             </ControlTemplate>
         </Setter>
